[package]
name = "udss-proxy-server"
version = "0.1.0"
edition = "2024"

[dependencies]
udss-proxy-acl = { workspace = true }
udss-proxy-config = { workspace = true }
udss-proxy-error = { workspace = true }
tokio = { workspace = true }
log = { workspace = true}
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
num_cpus = { workspace = true }